2005-01-26 10:20 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridLineSearchT) Renamed from gridOptimizeT to
	be more specific about the the method of optimization. Rewrote
	This method to optimize edge `lengths' in mapped space with
	the constraint of maintaining a minimum gridAR. The old method
	moved the edge node to improve gridAR directly. This simplified
	gridSmoothNode.

2005-01-25 21:55 Mike Park  <mike.park@nasa.gov>

	* Made 1.2.4 Release. ** internal release ** to save stable
	snapshot before merging the -DSURFACE_VALIDITY path into
	the mainline code.

2004-11-23 10:56 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (gridEdgeRatio3) The `integrated average' is
	really the average metric over the edge.

2004-11-16 09:39 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (gridEdgeRatio3) Computes the ratio of unity to
	the legth of an edge in the metric map. Returns the ratio with
	respect to the meric at node 0, node 1, and an integrated average.

2004-11-09 00:14 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridSmoothNode) if -DSURFACE_VALIDITY defined, 
	optimizeFaceUV is called instead of optimizedUV, so that the volume
	quality is ignored.

2004-11-03 16:50 Mike Park  <mike.park@nasa.gov>

	* src/Makefile.am created a new library libUnitMesh.a so that
	-DSURFACE_VALIDITY can be defined for unit_mesh.c and it will not
	interfere with the standalone sequential refine executable

2004-11-03 16:25 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridSplitEdge,gridCollapseEdge) the inserted
	or collapsed to node is projected to CAD when
	-DSURFACE_VALIDITY is defined. This will disrupt the behavior of
	the standalone sequential refine executable (not parallel
	librefine.a), and make gridmove projection unnecessary.

2004-11-01 23:09 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (gridAR) When -DSURFACE_VALIDITY is defined,
	will return -1.0 if a jacobian <= 6.0e-16 is found.